<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ContactUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:cardCornerRadius="60dp">

            <ImageView
                android:id="@+id/imageuser"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/applogo"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/contactname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/contactus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactqueries"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/contactemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactemail"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/contactphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactphone"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</FrameLayout>