<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp">

        <TextView
            android:id="@+id/username_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enterUsername"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp">

        <TextView
            android:id="@+id/passworduser_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enterPassword"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/passworduser_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/newUser_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notRegistered"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:gravity="center"
        android:textSize="20sp"/>

</LinearLayout>