<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp">

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enterYourName"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp">

            <TextView
                android:id="@+id/email_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enterYourEmail"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp">

            <TextView
                android:id="@+id/contactNumber_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enterYourContactNumber"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/contactNumber_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp">

            <TextView
                android:id="@+id/password_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enterPassword"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp">

            <TextView
                android:id="@+id/confirmPassword_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmPassword"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/confirmPassword_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:text="@string/register"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/oldUser_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alreadyRegister"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:textSize="20sp"/>

    </LinearLayout>

</ScrollView>